2006-12-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py: Check recent file for existance before trying to
	load that file. (bug #447)
	* src/DataViews/_RelationView.py: Escape XML special chars
	* src/DataViews/_PedigreeView.py: Escape XML special chars
	* src/plugins/TestcaseGenerator.py: Create media note object;
	Randomize URL

2006-12-11  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditMedia.py: fix menu title (bug#755)
	* src/GrampsDb/_WriteXML.py: handle XML escapes
	* src/DisplayModels/_BaseModel.py: handle ignored values in filtering

2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py (change_person): Break endless loop
	by passing the return values from _change_person.

2006-12-10  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000597: Narrative web site 
		generates uppercase directory names but lower case hrefs

2006-12-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: RunDatabaseRepair integration
	* src/GrampsDb/_WriteGedcom.py: RunDatabaseRepair integration
	* src/QuestionDialog.py: RunDatabaseRepair dialog to warn users to run
	database checks

2006-12-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_PeopleModel.py: Fix birth date fallback

2006-12-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: external view support for media objects
	* src/Editors/_EditPlace.py: external view support for media objects
	* src/Editors/_EditMediaRef.py: external view support for media objects
	* src/Editors/_EditMedia.py: external view support for media objects
	* src/glade/gramps.glade: external view support for media objects

2006-12-09  Benny Malengier  <bm@cage.UGent.be>
	* src/PlaceUtils.py: better parsing of longitude/latitude

2006-12-08  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/glade/gramps.glade: Update Name Format Editor hint section.
